1) Fixed Map connection between 5 and 9 to 6 and 8 2) add get description and updated search command to show all details about items 3)fixed cooldown and is usable methods with text effects so the use item command works properly 4) Fixed base attributes for Player