@@ -50,6 +50,8 @@ public class GameController {
         boolean isEntranceToGame = true;
 
         int nextRoomIndex = 1;
+        player.setRoom(getRoom(nextRoomIndex));
+
 
         // Controls whether player has input a direction
         // Resets on each iteration, defaults to true for first iteration of while loop to print the
@@ -57,12 +59,13 @@ public class GameController {
         boolean isMovingRooms = true;
 
         while (true) {
+            boolean hasMovedRooms = false;
             // If we are moving rooms, lets display the room message,
             // and if applicable the puzzle attached to the room
             if (isMovingRooms) {
                 // Print the room description
-                    view.printRoom(player.getRoom());
-                    isMovingRooms = false;
+                view.printRoom(player.getRoom());
+                isMovingRooms = false;
             }
 
             // keeps first room as not visited for 1st entry
@@ -75,18 +78,18 @@ public class GameController {
             isEntranceToGame = false;
 
             //This will try to get the monster that is currently in the room
-            Monster monster = GameStateManager.getMonsterInRoom(player.getRoom().getRoomId());
-            if (monster != null){
+            Monster monster = getMonsterInRoom(player.getRoom().getRoomId());
+            if (monster != null) {
                 Scanner sc = new Scanner(System.in);
                 view.outputString("You encounter " + monster.getName() + "!. Do you want to fight or flee?");
                 System.out.println("Enter fight or flee: ");
-                String choice  = sc.nextLine();
-                if (choice.equalsIgnoreCase("fight")){
+                String choice = sc.nextLine();
+                if (choice.equalsIgnoreCase("fight")) {
                     fightMonster(monster);
                 } else if (choice.equalsIgnoreCase("flee")) {
                     view.outputString("You flee from " + monster.getName() + ".");
                     continue;
-                }else {
+                } else {
                     System.out.println("Invalid choice: Fight or flee");
                     continue;
                 }
@@ -111,6 +114,7 @@ public class GameController {
                                 if (nextRoomIndex != 0 && getRoom(roomIndex).canNavigateTo(player)) {
                                     isMovingRooms = true;
                                     nextRoomIndex = roomIndex;
+                                    hasMovedRooms = true;
                                 } else {
                                     isMovingRooms = false;
                                     if (nextRoomIndex == 0) {
@@ -128,7 +132,7 @@ public class GameController {
                             nextRoomIndex = player.getPriorRoom();
                         }
                         case "LOCATION", "WHEREAMI" -> {
-                            isMovingRooms= false;
+                            isMovingRooms = false;
                             view.outputString("You are currently in: " + player.getRoom().getName());
                             view.outputString(player.getRoom().getDescription() + "\n");
                         }
@@ -143,8 +147,8 @@ public class GameController {
                             view.outputString("Strength: " + player.getStr());
                         }
                         case "EXPLORE" -> {
-                            isMovingRooms= false;
-                            view.outputString("Detailed description of your current room: \n"+ player.getRoom().getDescription() + "\n");
+                            isMovingRooms = false;
+                            view.outputString("Detailed description of your current room: \n" + player.getRoom().getDescription() + "\n");
                         }
                         case "HELP" -> {
                             if (command.length == 1) {
@@ -153,14 +157,20 @@ public class GameController {
                                 view.printDetailedHelp(command[1]);
                             }
                         }
-                       case "SEARCH" -> {
+                        case "SEARCH" -> {
                             isMovingRooms = false;
                             if (!player.getRoom().getArtifacts().isEmpty()) {
+                                view.outputString("You look around the room and notice the following item(s):");
                                 player.getRoom().getArtifacts().forEach((Artifact a) -> {
-                                    view.outputString(a.getName());
+                                    view.outputString("Item found: " + a.getName());
+                                    view.outputString("Type: " + a.getType());
+                                    view.outputString("Description: " + a.getDescription());
+                                    view.outputString("Effect: "+ a.getTextEffect());
+                                    view.outputString("Options: PICKUP " + a.getName() + " | IGNORE " + a.getName() + " | SWAP " + a.getName());
+
                                 });
                             } else {
-                                view.outputString("There are no artifacts in this room.");
+                                view.outputString("There are no items in this room.");
                             }
                             if (player.getRoom().getPuzzle() != null && !player.getRoom().getPuzzle().getIsSolved()) {
                                 view.outputString("Puzzle: " + player.getRoom().getPuzzle().getName());
@@ -168,25 +178,148 @@ public class GameController {
                         }
                         case "PICKUP" -> {
                             isMovingRooms = false;
-                            // Check if player entered a filename after "SAVE"
                             if (command.length < 2 || command[1].isEmpty()) {
-                                view.outputString("Please enter the name of the item you'd like to pickup.");
+                                view.outputString("Please enter the name of the item you'd like to pick up.");
+                                break;
                             }
-                            final Artifact[] foundArtifact = new Artifact[1];
-                            StringBuilder itemName = new StringBuilder();
+
+                            StringBuilder itemNameBuilder = new StringBuilder();
                             for (int i = 1; i < command.length; i++) {
-                                itemName.append(command[i]).append(" ");
+                                itemNameBuilder.append(command[i]).append(" ");
                             }
-                            player.getRoom().getArtifacts().forEach((Artifact a) -> {
-                                if (a.getName().equalsIgnoreCase(itemName.toString().trim())) {
-                                    foundArtifact[0] = a;
+                            String itemName = itemNameBuilder.toString().trim();
+
+                            Artifact foundArtifact = null;
+                            for (Artifact a : player.getRoom().getArtifacts()) {
+                                if (a.getName().equalsIgnoreCase(itemName)) {
+                                    foundArtifact = a;
+                                    break;
                                 }
-                            });
-                            if (foundArtifact[0] == null) {
+                            }
+
+                            if (foundArtifact == null) {
                                 view.outputString("This item is not located in the room.");
                             } else {
-                                foundArtifact[0].pickup(player);
-                                view.outputString(foundArtifact[0].getName() + " has been added to your inventory.");
+                                Artifact existing = player.getArtifactByType(foundArtifact.getType());
+                                if (existing != null) {
+                                    view.outputString("You already have a " + foundArtifact.getType() + " equipped.");
+                                    view.outputString("Use the 'SWAP " + foundArtifact.getName() + "' command to replace it.");
+                                } else {
+                                    foundArtifact.pickup(player);
+                                    view.outputString(foundArtifact.getName() + " has been added to your inventory.");
+                                }
+                            }
+                        }
+                        case "USE" -> {
+                            isMovingRooms = false;
+                            if (command.length < 2 || command[1].isEmpty()) {
+                                view.outputString("Please enter the name of the item you'd like to use.");
+                                break;
+                            }
+                            StringBuilder itemNameBuilder = new StringBuilder();
+                            for (int i = 1; i < command.length; i++) {
+                                itemNameBuilder.append(command[i]).append(" ");
+                            }
+                            String itemName = itemNameBuilder.toString().trim();
+
+                            Artifact itemToUse = null;
+                            for (Artifact artifact : player.getInventory()) {
+                                if (artifact.getName().equalsIgnoreCase(itemName)) {
+                                    itemToUse = artifact;
+                                    break;
+                                }
+                            }
+
+                            if (itemToUse == null) {
+                                view.outputString("You don't have an item named '" + itemName + "' in your inventory.");
+                                break;
+                            }
+
+                            if (itemToUse instanceof Consumable) {
+                                Consumable consumable = (Consumable) itemToUse;
+                                if (consumable.isUsable()) {
+                                    consumable.applyEffects(player);
+                                    consumable.setCooldown();
+                                    view.outputString("You used " + consumable.getName() + ".");
+
+                                } else {
+                                    view.outputString(consumable.getName() + " is on cooldown. It will be usable in " + consumable.getRoomsUntilUsable() + " room(s).");
+                                }
+                            } else {
+                                view.outputString(itemToUse.getName() + " cannot be used.");
+                            }
+                        }
+                        case "SWAP" -> {
+                            isMovingRooms = false;
+
+                            if (command.length < 2 || command[1].isEmpty()) {
+                                view.outputString("Please specify the name of the item you'd like to swap.");
+                                break;
+                            }
+
+                            // Reconstruct item name
+                            StringBuilder swapItemNameBuilder = new StringBuilder();
+                            for (int i = 1; i < command.length; i++) {
+                                swapItemNameBuilder.append(command[i]).append(" ");
+                            }
+                            String swapItemName = swapItemNameBuilder.toString().trim();
+
+                            // Find item in room
+                            Artifact itemInRoom = null;
+                            for (Artifact artifact : player.getRoom().getArtifacts()) {
+                                if (artifact.getName().equalsIgnoreCase(swapItemName)) {
+                                    itemInRoom = artifact;
+                                    break;
+                                }
+                            }
+
+                            if (itemInRoom == null) {
+                                view.outputString("There is no item named '" + swapItemName + "' in this room.");
+                                break;
+                            }
+
+                            // Find matching type in inventory
+                            Artifact playerItem = player.getArtifactByType(itemInRoom.getType());
+                            if (playerItem == null) {
+                                view.outputString("You don't have an item of type '" + itemInRoom.getType() + "' to swap.");
+                                view.outputString("Use 'PICKUP " + itemInRoom.getName() + "' instead.");
+                                break;
+                            }
+
+                            // Perform the swap
+                            player.getRoom().getArtifacts().add(playerItem);
+                            player.removeFromInventory(playerItem);                      // Remove current item
+                            player.addToInventory(itemInRoom);
+                            player.getRoom().getArtifacts().remove(itemInRoom);            // Remove room item
+
+                            view.outputString("You swapped your " + playerItem.getName() +
+                                    " for " + itemInRoom.getName() + ".");
+                        }
+                        case "IGNORE" -> {
+                            isMovingRooms = false;
+                            if (command.length < 2 || command[1].isEmpty()) {
+                                view.outputString("Please specify the name of the item you'd like to ignore.");
+                                break;
+                            }
+
+                            StringBuilder ignoreItemBuilder = new StringBuilder();
+                            for (int i = 1; i < command.length; i++) {
+                                ignoreItemBuilder.append(command[i]).append(" ");
+                            }
+                            String ignoredItemName = ignoreItemBuilder.toString().trim();
+
+                            Artifact itemToIgnore = null;
+                            for (Artifact artifact : player.getRoom().getArtifacts()) {
+                                if (artifact.getName().equalsIgnoreCase(ignoredItemName)) {
+                                    itemToIgnore = artifact;
+                                    break;
+                                }
+                            }
+
+                            if (itemToIgnore == null) {
+                                view.outputString("There is no item named '" + ignoredItemName + "' in this room.");
+                            } else {
+                                view.outputString("You ignored the " + itemToIgnore.getName() + ".");
                             }
                         }
                         case "INVENTORY" -> {
@@ -234,7 +367,7 @@ public class GameController {
                                 } else if (command[0].equalsIgnoreCase("solve") && !player.getRoom().getPuzzle().getIsSolved()) {
                                     Puzzle puzzle = player.getRoom().getPuzzle();
                                     view.outputString(puzzle.getName());
-                                    view.outputString(puzzle.getDescriptions().getFirst());
+                                    view.outputString(puzzle.getDescriptions().get(0));
                                     String answer;
                                     switch (puzzle) {
                                         case Puzzle.StandardPuzzle standardPuzzle -> {
@@ -377,12 +510,38 @@ public class GameController {
             } while (nextRoomIndex == 0);
             // after valid input is received current room is set to room entered by user
             player.setRoom(getRoom(nextRoomIndex));
-        }
+            // Decrement cooldowns for consumables
+            if (hasMovedRooms) {
+                for (Artifact artifact : player.getInventory()) {
+                    if (artifact instanceof Consumable) {
+                        ((Consumable) artifact).decrementCooldown();
+                    }
+                }
 
+            }
+        }
     }
 
     public Room getRoom(int roomIndex) {
         return roomsList.get(roomIndex);
+    }
+
+    private Monster getMonsterInRoom(int roomIndex) {
+        try {
+            // Implement logic to get the monster in the room based on roomIndex
+            Map<String, Monster> monstersList = Monster.loadMonsters(GameStateManager.readFile("src", "data", "Monsters.txt"));
+            // </>his could involve checking the monster's locations
+            for (Monster monster : monstersList.values()) {
+                for (String location : monster.getLocations()) {
+                    if (Integer.parseInt(location) == roomIndex) {
+                        return monster;
+                    }
+                }
+            }
+        } catch (IOException ioe) {
+            ioe.printStackTrace();
+        }
+        return null;
     }
 
     private void fightMonster(Monster monster) {
@@ -393,7 +552,7 @@ public class GameController {
             System.out.println("Enter fight, block, use item, or flee:  ");
             String choice = sc.nextLine();
             if (choice.equalsIgnoreCase("fight")){
-                monster.takeDamage(player.getStr());
+            monster.takeDamage(player.getStr());
             } else if (choice.equalsIgnoreCase("block")) {
                 monster.setPlayerBlocking(true);
             } else if (choice.contains("use")) {
